--- a/langzeitarchivierung.bib
+++ b/langzeitarchivierung.bib
@@ -1,148 +1,136 @@
-﻿@book{Kuhlen.2004,
- year = {2004},
- title = {Grundlagen der praktischen Information und Dokumentation: Bd. 1 : Handbuch zur Einführung in die Informationswissenschaft und -praxis},
- address = {München},
- edition = {5., völlig neu gefasste Ausg.},
- publisher = {Saur},
- editor = {Kuhlen, Rainer and Seeger, Thomas and Strauch, Dietmar}
- note = {Ein Beitrag aus diesem Werk wurde als Informationsquelle genutzt.}
+﻿@book{Kuhlen2004,
+    year = {2004},
+    title = {Grundlagen der praktischen Information und Dokumentation: Bd. 1 : Handbuch zur Einführung in die Informationswissenschaft und -praxis},
+    address = {München},
+    edition = {5., völlig neu gefasste Ausg.},
+    publisher = {Saur},
+    editor = {Kuhlen, Rainer and Seeger, Thomas and Strauch, Dietmar},
+    note = {Ein Beitrag aus diesem Werk wurde als Informationsquelle genutzt.}
 }
 
-
-@misc{DeutscheNationalbibliothek.,
- author = {{Deutsche Nationalbibliothek}SUB Göttingen},
- editor = {{Deutsche Nationalbibliothek} and SUB Göttingen},
- title = {DP4Lib},
- url = {http://dp4lib.langzeitarchivierung.de/},
- urldate = {08.05.2014}
- note = {Ergänzende Informationen zum Projekt DP4Lib}
+@misc{DP4Lib2,
+    author = {{SUB Göttingen}},
+    title = {DP4Lib},
+    year = {o.J.},
+    url = {http://dp4lib.langzeitarchivierung.de/},
+    urldate = {08.05.2014},
+    note = {Ergänzende Informationen zum Projekt DP4Lib}
 }
 
-
-@misc{DeutscheNationalbibliothek.24.01.2014,
- author = {{Deutsche Nationalbibliothek}},
- date = {24.01.2014},
- title = {Eine Million Netzpublikationen im Bestand der Deutschen Nationalbibliothek},
- url = {http://www.dnb.de/DE/Aktuell/Presse/1MioNP.html},
- urldate = {12.05.2014}
- note = {Überblick über die aktuelle Bestandsentwicklung der Netzpublikationen an der DNB sowie Hinweise zur deren Nutzung im Hause (rechtlicher Hintergrund!)}
+@misc{DNB2014netz,
+    author = {{Deutsche Nationalbibliothek}},
+    year = {2014},
+    title = {Eine Million Netzpublikationen im Bestand der Deutschen Nationalbibliothek},
+    url = {http://www.dnb.de/DE/Aktuell/Presse/1MioNP.html},
+    urldate = {12.05.2014},
+    note = {Überblick über die aktuelle Bestandsentwicklung der Netzpublikationen an der DNB sowie Hinweise zur deren Nutzung im Hause (rechtlicher Hintergrund!)}
 }
 
-
-@book{.2013,
- year = {2013},
- title = {Was bleibt? Nachhaltigkeit der Kultur in der digitalen Welt},
- address = {Berlin},
- edition = {1. Aufl.},
- publisher = {iRights Media}
- note = {Ein Beitrag aus diesem Werk wurde als Informationsquelle genutzt.}
+@book{Wasbleibt2013,
+    year = {2013},
+    title = {Was bleibt? Nachhaltigkeit der Kultur in der digitalen Welt},
+    address = {Berlin},
+    edition = {1. Aufl.},
+    publisher = {iRights Media},
+    note = {Ein Beitrag aus diesem Werk wurde als Informationsquelle genutzt.}
 }
 
-
-@misc{Steinke.2013,
- author = {Steinke, Tobias},
- editor = {{Deutsche Nationalbibliothek}},
- year = {2013},
- title = {Langzeitarchivierung},
- url = {http://www.dnb.de/DE/Netzpublikationen/Langzeitarchivierung/langzeitarchivierung_node.html},
- urldate = {24.04.2014}
- note {Kompakter Überblick über das Vorhaben 'Langzeitarchivierung an der DNB'.}
+@misc{Steinke2013,
+    author = {Steinke, Tobias},
+    editor = {{Deutsche Nationalbibliothek}},
+    year = {2013},
+    title = {Langzeitarchivierung},
+    url = {http://www.dnb.de/DE/Netzpublikationen/Langzeitarchivierung/langzeitarchivierung_node.html},
+    urldate = {24.04.2014},
+    note = {Kompakter Überblick über das Vorhaben 'Langzeitarchivierung an der DNB'.}
 }
 
-
-@incollection{Liegmann.2004,
- author = {Liegmann, Hans and Schwens, Ute},
- title = {Langzeitarchivierung digitaler Ressourcen},
- url = {urn:nbn:de:0008-2005110800},
- urldate = {14.05.2014},
- pages = {567–570},
- volume = {1},
- publisher = {Saur},
- editor = {Kuhlen, Rainer and Seeger, Thomas and Strauch, Dietmar},
- booktitle = {Grundlagen der praktischen Information und Dokumentation: Bd. 1 : Handbuch zur Einführung in die Informationswissenschaft und -praxis},
- year = {2004},
- address = {München}
- note = {Definition des Begriffs Langzeitarchivierung. Konkretisierung des Gedankens, dass die Information und ihre Interpretierbarkeit erhalten werden soll und das die Interpretierbarkeit sich an dem technologischen Wandel orientiert.}
+@incollection{Liegmann2004,
+    author = {Liegmann, Hans and Schwens, Ute},
+    title = {Langzeitarchivierung digitaler Ressourcen},
+    url = {urn:nbn:de:0008-2005110800},
+    urldate = {14.05.2014},
+    pages = {567–570},
+    volume = {1},
+    publisher = {Saur},
+    editor = {Kuhlen, Rainer and Seeger, Thomas and Strauch, Dietmar},
+    booktitle = {Grundlagen der praktischen Information und Dokumentation: Bd. 1 : Handbuch zur Einführung in die Informationswissenschaft und -praxis},
+    year = {2004},
+    address = {München},
+    note = {Definition des Begriffs Langzeitarchivierung. Konkretisierung des Gedankens, dass die Information und ihre Interpretierbarkeit erhalten werden soll und das die Interpretierbarkeit sich an dem technologischen Wandel orientiert.}
 }
 
-
-@misc{DeutscheNationalbibliotheku.a..,
- author = {{Deutsche Nationalbibliothek [u.a.]}},
- editor = {{Deutsche Nationalbibliothek [u.a.]}},
- title = {kopal: Daten für die Zukunft},
- url = {http://kopal.langzeitarchivierung.de/index_koLibRI.php.de},
- urldate = {08.05.2014}
- note = {Weiterführende Informationen zum Projekt kopal und die Open-Source-Software koLibRI.}
+@misc{DNBkopal,
+    author = {{Deutsche Nationalbibliothek [u.a.]}},
+    editor = {{Deutsche Nationalbibliothek [u.a.]}},
+    title = {kopal: Daten für die Zukunft},
+    url = {http://kopal.langzeitarchivierung.de/index_koLibRI.php.de},
+    urldate = {08.05.2014},
+    year = {o.J.},
+    note = {Weiterführende Informationen zum Projekt kopal und die Open-Source-Software koLibRI.}
 }
 
-
-@misc{DeutscheNationalbibliothek.2013,
- author = {{Deutsche Nationalbibliothek}},
- editor = {{Deutsche Nationalbibliothek}},
- year = {2013},
- title = {Anleitung zur Ablieferung},
- url = {http://www.dnb.de/ablieferungnp},
- urldate = {12.05.2014}
- note = {Beschreibung der möglichen Ablieferungsverfahren von Netzpublikationen an die DNB.}
+@misc{DeutscheNationalbibliothek2013,
+    author = {{Deutsche Nationalbibliothek}},
+    editor = {{Deutsche Nationalbibliothek}},
+    year = {2013},
+    title = {Anleitung zur Ablieferung},
+    url = {http://www.dnb.de/ablieferungnp},
+    urldate = {12.05.2014},
+    note = {Beschreibung der möglichen Ablieferungsverfahren von Netzpublikationen an die DNB.}
 }
 
-
-@misc{DeutscheNationalbibliothek.2012,
- author = {{Deutsche Nationalbibliothek}},
- editor = {{Deutsche Nationalbibliothek}},
- year = {2012},
- title = {DP4Lib: Digital preservation for libraries},
- url = {http://www.dnb.de/DE/Wir/Projekte/Abgeschlossen/dp4lib.html},
- urldate = {08.05.2012}
- note = {Überblick über das Projekt DP4Lib an der DNB.}
+@misc{DP4Lib1,
+    author = {{Deutsche Nationalbibliothek}},
+    editor = {{Deutsche Nationalbibliothek}},
+    year = {2012},
+    title = {DP4Lib: Digital preservation for libraries},
+    url = {http://www.dnb.de/DE/Wir/Projekte/Abgeschlossen/dp4lib.html},
+    urldate = {08.05.2012},
+    note = {Überblick über das Projekt DP4Lib an der DNB.}
 }
 
-
-@incollection{Beinert.2013,
- author = {Beinert, Tobias and Straube, Armin},
- title = {Aktuelle Herausforderungen der digitalen Langzeitarchivierung},
- url = {http://irights-media.de/publikationen/was-bleibt-nachhaltigkeit-der-kultur-in-der-digitalen-welt/},
- urldate = {14.05.2014},
- pages = {27–46},
- publisher = {iRights Media},
- booktitle = {Was bleibt?},
- year = {2013},
- address = {Berlin}
- note = {Aktuelle Publikation zum Thema Langzeitarchivierung, die das große Spektrum der Herausforderungen und möglichen Probleme beleuchtet.}
+@incollection{Beinert2013,
+    author = {Beinert, Tobias and Straube, Armin},
+    title = {Aktuelle Herausforderungen der digitalen Langzeitarchivierung},
+    url = {http://irights-media.de/publikationen/was-bleibt-nachhaltigkeit-der-kultur-in-der-digitalen-welt/},
+    urldate = {14.05.2014},
+    pages = {27–46},
+    publisher = {iRights Media},
+    booktitle = {Was bleibt?},
+    year = {2013},
+    address = {Berlin},
+    note = {Aktuelle Publikation zum Thema Langzeitarchivierung, die das große Spektrum der Herausforderungen und möglichen Probleme beleuchtet.}
 }
 
-
-@misc{DeutscheNationalbibliothek.2014,
- author = {{Deutsche Nationalbibliothek}},
- year = {2014},
- title = {Strategische Prioritäten: [2013 - 2016]},
- url = {http://d-nb.info/1050432266/34},
- address = {Frankfurt am Main},
- urldate = {12.05.2014},
- editor = {{Deutsche Nationalbibliothek}}
- note = {Strategiepapier der DNB, welche Prioritäten bis 2016 umgesetzt werdene sollen. In Bezug auf die Langzeitarchivierung und die Anpassung der Sammelaktivität und der Erwerbungsabläufe an die neuen Publikationsformen (Netzpublikationen) erscheinen mir die Ziele etwas zu optimistisch formuliert zu sein.}
+@misc{DeutscheNationalbibliothek2014,
+    author = {{Deutsche Nationalbibliothek}},
+    year = {2014},
+    title = {Strategische Prioritäten: [2013 - 2016]},
+    url = {http://d-nb.info/1050432266/34},
+    address = {Frankfurt am Main},
+    urldate = {12.05.2014},
+    editor = {{Deutsche Nationalbibliothek}},
+    note = {Strategiepapier der DNB, welche Prioritäten bis 2016 umgesetzt werdene sollen. In Bezug auf die Langzeitarchivierung und die Anpassung der Sammelaktivität und der Erwerbungsabläufe an die neuen Publikationsformen (Netzpublikationen) erscheinen mir die Ziele etwas zu optimistisch formuliert zu sein.}
 }
 
-
-@misc{DeutscheNationalbibliothek.2013b,
- author = {{Deutsche Nationalbibliothek}},
- editor = {{Deutsche Nationalbibliothek}},
- year = {2013},
- title = {Sammelauftrag der Deutschen Nationalbibliothek},
- url = {http://www.dnb.de/erwerbung},
- urldate = {08.05.2014}
- note {Überblick über den gesetzlichen Sammelauftrag der DNB. Es wird sowohl auf die physischen Medienwerke, als auch auf die Netzpublikationen eingegangen.}
+@misc{DeutscheNationalbibliothek2013b,
+    author = {{Deutsche Nationalbibliothek}},
+    editor = {{Deutsche Nationalbibliothek}},
+    year = {2013},
+    title = {Sammelauftrag der Deutschen Nationalbibliothek},
+    url = {http://www.dnb.de/erwerbung},
+    urldate = {08.05.2014},
+    note = {Überblick über den gesetzlichen Sammelauftrag der DNB. Es wird sowohl auf die physischen Medienwerke, als auch auf die Netzpublikationen eingegangen.}
 }
 
-
-@misc{DeutscheNationalbibliothek.2013c,
- author = {{Deutsche Nationalbibliothek}},
- editor = {{Deutsche Nationalbibliothek}},
- year = {2013},
- title = {Netzpublikationen: häufig gestellte Fragen},
- url = {http://www.dnb.de/DE/Netzpublikationen/FAQ/faq_node.html},
- urldate = {12.05.2014}
- note {Sehr gute Übersicht, die einen schnellen Einstieg zu vielen Fragen rund um die Netzpublikationen bietet. Weiterführende Links ermöglichen das vertiefte Einlesen in spezielle Fragestellungen.}
+@misc{DeutscheNationalbibliothek2013c,
+    author = {{Deutsche Nationalbibliothek}},
+    editor = {{Deutsche Nationalbibliothek}},
+    year = {2013},
+    title = {Netzpublikationen: häufig gestellte Fragen},
+    url = {http://www.dnb.de/DE/Netzpublikationen/FAQ/faq_node.html},
+    urldate = {12.05.2014},
+    note = {Sehr gute Übersicht, die einen schnellen Einstieg zu vielen Fragen rund um die Netzpublikationen bietet. Weiterführende Links ermöglichen das vertiefte Einlesen in spezielle Fragestellungen.}
 }
-
 
